Implemented the Post API functions
